--- a/tsconfig.json
+++ b/tsconfig.json
@@ -70,6 +70,6 @@
     "skipLibCheck": true,                           /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": [ "src/**/*" ],
-  "exclude": [ "src/dist" ]
+  //"include": [ "src/**/*" ],
+  //"exclude": [ "src/dist" ]
 }
