--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongodb": "^4.1.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "serialport": "^9.2.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/serialport": "^8.0.2",
     "npm-run-all": "^4.1.5",
     "shelljs": "^0.8.4",
     "ts-node": "^10.2.1",
